Clean up some warnings
git-svn-id: https://svn.forgerock.org/openicf/trunk@4607 05b3e5af-d696-470f-a577-fd7599f74d3c